# marathon_app

./: .gitignore  Dockerfile  README.md  pyproject.toml
chat_gpt/: README.md  chat_interaction.py  token_template.json
garmin/: README.md  main.py
google_calendar/: README.md  create_event.py  logging_gc.py  main.py  quickstart.py  view_calendar.py
webapp/: app.py
webapp/static/: calendar.css  chatbot.css  garmin.css  index.css  styles.css  view_calendar.css
webapp/templates/: calendar.html  chatbot.html  garmin.html  index.html  insights_activities.html  task_planning.html  training_activities.html
